--- a/src/com/dabomstew/pkrandom/config/gen4_offsets.ini
+++ b/src/com/dabomstew/pkrandom/config/gen4_offsets.ini
@@ -101,6 +101,7 @@ DoubleBattleTextBoxPrefix=F7F71AFEF7F734FE
 TrainerEndFileNumber=4
 TrainerEndTextBoxOffset=0xD8
 TMText{}={42=[538:1], 48=[54:2], 56=[466:1, 466:2], 63=[135:35], 66=[453:1], 67=[90:0], 76=[60:4], 77=[437:2], 78=[419:2], 88=[518:2], 92=[449:1]}
+Maps=fielddata/land_data/land_data.narc
 
 [Pearl (U)]
 Game=APAE
@@ -216,6 +217,13 @@ DoubleBattleWalkingPrefix1=16B00020F8BD1498
 DoubleBattleWalkingPrefix2=C4FE16B00120F8BD
 DoubleBattleTextBoxPrefix=F6F792FCF6F7ACFC
 TMText{}={27=[561:10], 42=[594:1], 48=[61:1], 56=[517:0, 517:1], 63=[143:51], 66=[504:1, 504:2], 67=[98:0], 76=[67:4], 77=[488:2], 78=[470:2], 88=[574:2], 92=[500:1]}
+GymBadgeNumbers=[0,1,4,2,3,5,6,7]
+CityTextsOffsets=[65,85,106,143,131,54,176,162]
+GymSignMsgOffsets=[28,37,53,62,42,37,19,22]
+GymScriptOffsets=[52,73,98,137,125,38,176,160]
+LeaderTrainerOffsets=[0xf6,0x13b,0x13e,0x13d,0x13c,0xfa,0x13f,0x140]
+LeaderTextsOffsets=[67,87,109,144,133,56,178,165]
+GymStatueTextsOffsets=[67,87,108,144,133,56,178,164]
 
 [HeartGold (U)]
 Game=IPKE
@@ -364,6 +372,7 @@ FrontierScriptNumber=76
 FrontierScriptTMOffsets{}={40=0xC5C, 31=0xC7A, 89=0xC98, 81=0xCB6, 71=0xCD4, 26=0xCF2, 30=0xD88, 53=0xDA6, 36=0xDC4, 59=0xDE2, 06=0xEA2, 73=0xEC0, 61=0xEDE, 45=0xEFC, 08=0xF1A, 04=0xF38}
 MiscUITextOffset=191
 FrontierTMText{}={40=380, 31=381, 89=382, 81=383, 71=384, 26=385, 30=386, 53=387, 36=388, 59=389, 06=390, 73=391, 61=392, 45=393, 08=394, 04=395}
+Maps=a/0/6/5
 
 [SoulSilver (U)]
 Game=IPGE
