--- a/src/com/dabomstew/pkrandom/newgui/Bundle.properties
+++ b/src/com/dabomstew/pkrandom/newgui/Bundle.properties
@@ -2,6 +2,7 @@
 # and open the template in the editor.
 
 GUI.versionLabel.text=Randomizer ZX Version %s
+GUI.entranceVersionLabel.text=Entrance Randomizer Fork, Version %s
 GUI.generalOptionsPanel.title=General Options
 GUI.limitPokemonCheckBox.text=Limit Pokemon
 GUI.limitPokemonCheckBox.toolTipText=<html>Select this to allow yourself to limit the Pokemon used by the randomization.<br /><b>If this box isn't checked all Pokemon will be allowed.</b>
@@ -19,7 +20,7 @@ GUI.loadSettingsButton.toolTipText=<html>Clicking this button allows you to load
 GUI.loadSettingsButton.text=Load Settings
 GUI.saveSettingsButton.toolTipText=<html>Clicking this will allow you to save the current randomization settings as a file.<br />You can then load these settings when you are randomizing any ROM.<br />The way in which ROMs with more or less features than the current one<br />  are handled is described when you hover over the "Load Settings" button.
 GUI.saveSettingsButton.text=Save Settings
-GUI.websiteLinkLabel.text=<html><a href="https://github.com/Ajarmar/universal-pokemon-randomizer-zx/releases">Release page (latest version: %s)</a>
+GUI.websiteLinkLabel.text=<html><a href="https://github.com/SilverstarStream/pokemon-entrance-randomizer/releases">Release page (latest version: %s)</a>
 GUI.pokemonTraitsPanel.title=Pokemon Traits
 GUI.pbsPanel.title=Pokemon Base Statistics
 GUI.pbsUnchangedRadioButton.toolTipText=Don't change Pokemon stats from the base at all.
@@ -316,6 +317,15 @@ GUI.puRandomRadioButton.toolTipText=Items obtained via the Pickup ability are ra
 GUI.puRandomRadioButton.text=Random
 GUI.puBanBadItemsCheckBox.toolTipText=<html>Checking this will remove "bad" items that don't do much from the set of possible random items for the Pickup item table, such as berries and mail.
 GUI.puBanBadItemsCheckBox.text=Ban Bad Items
+GUI.entrancesPanel.title=Entrances
+GUI.rePanel.title=Entrances
+GUI.reRandomizeMapCheckBox.toolTipText=<html>Generate a randomized map.<br />The levels and evolution stage of both Trainers' teams and grass/cave wild encounters on routes are scaled.<br />Please see the explanation in the included README for more details.
+GUI.reRandomizeMapCheckBox.text=Randomize Map
+GUI.reShuffleGymsCheckBox.toolTipText=<html>Randomize which gym is found in each city.<br />The levels and evolution stage of gym Trainers' teams are scaled.<br />Gym leaders use a version of their vanilla team designed for the city they are randomized to.
+GUI.reShuffleGymsCheckBox.text=Shuffle Gyms
+GUI.reShuffleE4CheckBox.toolTipText=<html>Shuffle the rooms of the Elite 4.<br />In games with a linear Elite 4, their teams' levels are scaled.
+GUI.reShuffleE4CheckBox.text=Shuffle Elite 4
+GUI.reUnsupportedWarningLabel.text=<html><b>This randomizer does not (currently) support this ROM for entrance randomization.<br />While there should be no downside to using this fork as your Pokemon randomizer, it's better to use the official ZX fork.<br />This fork does NOT share seed and settings compatibility with the official ZX randomizer.</b>
 GUI.miscTweaksPanel.title=Misc. Tweaks
 GUI.miscPanel.title=Misc. Tweaks
 GUI.miscNoneAvailableLabel.text=There are no tweaks available for the currently loaded game.
@@ -380,10 +390,12 @@ GUI.presetDifferentCustomNames=You don't have the same set of custom names as th
 GUI.starterUnavailable=Could not set one of the custom starters from the settings file because it does not exist in this generation.
 GUI.saveFailedMessage=Error during randomization: %s.\nIf this is the first time you've seen this message, try again.\nIf it keeps happening, try loosening any restrictive settings you've selected.\nA log file containing some details has been saved to %s.\nPlease include this file in any bug reports you do.
 GUI.saveFailedMessageNoLog=Error during randomization: %s.\nIf this is the first time you've seen this message, try again.\nIf it keeps happening, try loosening any restrictive settings you've selected.
+GUI.leaderTeamsError=Error with the leader teams file: %s
+GUI.leaderTeamsErrorNoLog=Error with the leader teams file: %s
 GUI.saveFailedIO=There was an unhandled exception trying to save your ROM to disk.\nA log file containing some details has been saved to %s.\nPlease include this file in any bug reports you do.
 GUI.saveFailedIONoLog=There was an unhandled exception trying to save your ROM to disk.
 GUI.raceModeCheckValuePopup=Your check value for the race is:\n%08X\nDistribute this along with the preset file, if you're the race maker!\nIf you received this in a race, compare it to the value the race maker gave.
-GUI.saveLogDialog.text=Do you want to save a log file of the randomization performed?\nThis may allow you to gain an unfair advantage, do not do so if you are doing something like a race.
+GUI.saveLogDialog.text=Do you want to save a log file of the randomization performed?\n!!! I highly encourage you to do so in case there is an error !!!\nThis may allow you to gain an unfair advantage, do not do so if you are doing something like a race.
 GUI.saveLogDialog.title=Save Log?
 GUI.logSaveFailed=Could not save log file!
 GUI.logSaved=Log file saved to\n%s.log
@@ -564,7 +576,7 @@ GUI.totpPercentageLevelModifierCheckBox.toolTipText=Checking this will enable a 
 GUI.totpAllyUnchangedRadioButton.toolTipText=Don't change Ally Pokemon.
 GUI.pmsEvolutionMovesCheckBox.text=Evolution Moves for All Pokemon
 GUI.pmsEvolutionMovesCheckBox.toolTipText=<html>Selecting this option will cause every Pokemon to learn a move upon evolution.<br /><br /><b>Use carefully with Sun/Moon 1.0 - </b>due to a glitch, if a Pokemon has an evolution move and also learns a move<br />on the level that it evolved at, it will only learn the evolution move upon evolving.
-GUI.windowTitle=Universal Pokemon Randomizer ZX v%s
+GUI.windowTitle=Pokemon Entrance Randomizer v%s
 GUI.wikiLinkLabel.text=<html><a href="https://github.com/Ajarmar/universal-pokemon-randomizer-zx/wiki">Wiki</a>
 GUI.paWeighDuplicatesTogetherCheckBox.text=Combine Duplicate Abilities
 GUI.paWeighDuplicatesTogetherCheckBox.toolTipText=<html>This setting causes abilities that have the exact same effect to be considered as the same ability for randomization probability purposes. Every variation of the respective abilities can still appear.<br />This applies to:<br /><b>Gen 3+:</b> Insomnia/Vital Spirit, Clear Body/White Smoke, Huge Power/Pure Power, Battle Armor/Shell Armor, Cloud Nine/Air Lock<br /><b>Gen 4+:</b> Filter/Solid Rock<br /><b>Gen 5+:</b> Rough Skin/Iron Barbs, Mold Breaker/Turboblaze/Teravolt<br /><b>Gen 7+:</b> Wimp Out/Emergency Exit, Queenly Majesty/Dazzling, Gooey/Tangling Hair, Receiver/Power of Alchemy, Clear Body/White Smoke/Full Metal Body, Multiscale/Shadow Shield, Filter/Solid Rock/Prism Armor
@@ -586,6 +598,7 @@ GUI.settingsStringTooOld=The settings string was generated with an older randomi
 GUI.settingsStringLoaded=Settings loaded from string.
 GUI.settingsStringOlder=This settings string was created by an older randomizer version.\nThe randomizer will attempt to open it anyway, but you should look out for new options added since you made it.
 GUI.pleaseUseTheLauncher=<html>The randomizer was not started via the launcher. You will not be able to load 3DS games into the randomizer.<br /><br />To randomize 3DS games, please start the randomizer by double-clicking on the appropriate launcher<br/>for your operating system (e.g., use launcher_WINDOWS.bat on Windows).<br /><br />If you are seeing this message despite using the launcher, make sure that you are using the<br />launcher bundled with version 4.2.0 (or later) of the randomizer.
+GUI.nonEnglishWarning=<html>Warning: a non-English/non-US ROM was loaded.<br />This randomizer fork currently only intends to support the US version, and other regions might not be compatible with the entrance randomizer settings.<br />Please use those settings at your own risk, and do not expect them to work.
 GUI.tmFollowEvolutionsCheckBox.text=Follow Evolutions
 GUI.tmFollowEvolutionsCheckBox.toolTipText=<html>When this is selected and TM compatibility is randomized, evolutions of a Pokemon will inherit that Pokemon's TM compatibilities.<br />Additionally, when a Pokemon evolves, each TM will have:<br /><b>Random (prefer same type)</b>: A 90% chance of becoming learnable if the Pokemon just gained its type through evolution, a 10% chance otherwise.<br/><b>Random (completely)</b>: A 25% chance of becoming learnable regardless of type.
 GUI.mtFollowEvolutionsCheckBox.text=Follow Evolutions
