update for initial release

--- a/src/com/dabomstew/pkrandom/newgui/Bundle.properties
+++ b/src/com/dabomstew/pkrandom/newgui/Bundle.properties
@@ -2,7 +2,7 @@
 # and open the template in the editor.
 
 GUI.versionLabel.text=Randomizer ZX Version %s
-GUI.entranceVersionLabel.text=Entrance Randomizer Fork, Version %s
+GUI.entranceVersionLabel.text=Entrance Randomizer Version %s
 GUI.generalOptionsPanel.title=General Options
 GUI.limitPokemonCheckBox.text=Limit Pokemon
 GUI.limitPokemonCheckBox.toolTipText=<html>Select this to allow yourself to limit the Pokemon used by the randomization.<br /><b>If this box isn't checked all Pokemon will be allowed.</b>
@@ -590,7 +590,7 @@ GUI.keepGameLoadedAfterRandomizingMenuItem.text=Keep Game Loaded After Randomizi
 GUI.unloadGameAfterRandomizingMenuItem.text=Unload Game After Randomizing
 GUI.keepGameLoadedAfterRandomizing=Your loaded game and settings will now remain after a successful randomization.
 GUI.unloadGameAfterRandomizing=Your loaded game and settings will now be unloaded after a successful randomization (this is the default setting).
-GUI.firstStart=Welcome to the Universal Pokemon Randomizer ZX! You are using version %s.
+GUI.firstStart=Welcome to the Pokemon Entrance Randomizer! You are using version %s.
 GUI.loadGetSettingsMenuItem.text=Get/Load Settings String
 GUI.invalidSettingsString=The settings string you attempted to load is invalid.
 GUI.settingsStringTooNew=The settings string was generated with a newer randomizer version. Try downloading the latest version.
