--- a/src/com/dabomstew/pkrandom/newgui/Bundle.properties
+++ b/src/com/dabomstew/pkrandom/newgui/Bundle.properties
@@ -193,6 +193,8 @@ GUI.tpPercentageLevelModifierCheckBox.toolTipText=<html>Checking this will enabl
 GUI.tpPercentageLevelModifierCheckBox.text=Percentage Level Modifier:
 GUI.tpAllowAlternateFormesCheckBox.toolTipText=<html>Allow trainers to have alternate formes of Pokemon, such as the various formes of Rotom or Deoxys.<br />Note that their traits are randomized/shuffled separately from their base formes.
 GUI.tpAllowAlternateFormesCheckBox.text=Allow Alternate Formes
+GUI.tpRandomizeLeadersCheckBox.toolTipText=<html>Shuffle Gyms replaces each gym leader's team with one in the leader_teams file.<br />Check this to include the gym leader's teams for randomization if Shuffle Gyms is checked.<br />The leader_teams file is still used for the number of team members and levels.
+GUI.tpRandomizeLeadersCheckBox.text=(Shuffle Gyms) Randomize Leaders' Teams
 GUI.wildPokemonPanel.title=Wild Pokemon
 GUI.wpPanel.title=Wild Pokemon
 GUI.wpUnchangedRadioButton.toolTipText=Don't change Wild Pokemon at all.
@@ -325,7 +327,7 @@ GUI.reShuffleGymsCheckBox.toolTipText=<html>Randomize which gym is found in each
 GUI.reShuffleGymsCheckBox.text=Shuffle Gyms
 GUI.reShuffleE4CheckBox.toolTipText=<html>Shuffle the rooms of the Elite 4.<br />In games with a linear Elite 4, their teams' levels are scaled.
 GUI.reShuffleE4CheckBox.text=Shuffle Elite 4
-GUI.reUnsupportedWarningLabel.text=<html><b>This randomizer does not (currently) support this ROM for entrance randomization.<br />While there should be no downside to using this fork as your Pokemon randomizer, it's better to use the official ZX fork.<br />This fork does NOT share seed and settings compatibility with the official ZX randomizer.</b>
+GUI.reUnsupportedWarningLabel.text=<html><b>This ROM is not (currently) supported for entrance randomization.<br />While there should be no downside to using this fork as your Pokemon randomizer, it's better to use the official ZX fork.<br />This fork does NOT share seed and settings compatibility with the official ZX randomizer.</b>
 GUI.miscTweaksPanel.title=Misc. Tweaks
 GUI.miscPanel.title=Misc. Tweaks
 GUI.miscNoneAvailableLabel.text=There are no tweaks available for the currently loaded game.
