BW2 script parsing

--- a/src/com/dabomstew/pkrandom/config/gen5_offsets.ini
+++ b/src/com/dabomstew/pkrandom/config/gen5_offsets.ini
@@ -119,6 +119,7 @@ DoubleBattleLimitPrefix=321C26E0012E17D1
 DoubleBattleGetPointerPrefix=0A9906980904090C
 BeqToSingleTrainerNumber=0xD0D1
 TextBoxChoicePrefix=6088B0420AD1A088
+GymScriptOffsets=[14,38,59,126,194,216,228,242]
 
 [White (U)]
 Game=IRAO
@@ -253,6 +254,8 @@ DoubleBattleLimitPrefix=0224E3E7012817D1
 DoubleBattleGetPointerPrefix=0A9906980904090C
 BeqToSingleTrainerNumber=0xD0C7
 TextBoxChoicePrefix=6088A8420AD1A088
+GymScriptOffsets=[978,1004,976,126,194,216,242,946]
+CheckBadgeScripts=[58,196]
 
 
 [White 2 (U)]
