add gen5 gym shuffle + script parsing

--- a/src/com/dabomstew/pkrandom/config/gen4_offsets.ini
+++ b/src/com/dabomstew/pkrandom/config/gen4_offsets.ini
@@ -102,7 +102,7 @@ DoubleBattleTextBoxPrefix=F7F71AFEF7F734FE
 TrainerEndFileNumber=4
 TrainerEndTextBoxOffset=0xD8
 TMText{}={42=[538:1], 48=[54:2], 56=[466:1, 466:2], 63=[135:35], 66=[453:1], 67=[90:0], 76=[60:4], 77=[437:2], 78=[419:2], 88=[518:2], 92=[449:1]}
-Maps=fielddata/land_data/land_data.narc
+File<Maps>=<fielddata/land_data/land_data.narc, E1E68D47>
 Arm9CRC32=08E0337C
 OverlayCRC32<6>=0AE6A693
 OverlayCRC32<11>=3DCCA476
@@ -399,7 +399,7 @@ FrontierScriptNumber=76
 FrontierScriptTMOffsets{}={40=0xC5C, 31=0xC7A, 89=0xC98, 81=0xCB6, 71=0xCD4, 26=0xCF2, 30=0xD88, 53=0xDA6, 36=0xDC4, 59=0xDE2, 06=0xEA2, 73=0xEC0, 61=0xEDE, 45=0xEFC, 08=0xF1A, 04=0xF38}
 MiscUITextOffset=191
 FrontierTMText{}={40=380, 31=381, 89=382, 81=383, 71=384, 26=385, 30=386, 53=387, 36=388, 59=389, 06=390, 73=391, 61=392, 45=393, 08=394, 04=395}
-Maps=a/0/6/5
+File<Maps>=<a/0/6/5, 4704244D>
 Arm9CRC32=ED466320
 OverlayCRC32<1>=21F7A855
 OverlayCRC32<12>=90D2AF3E
