--- a/src/com/dabomstew/pkrandom/config/gen5_offsets.ini
+++ b/src/com/dabomstew/pkrandom/config/gen5_offsets.ini
@@ -121,6 +121,7 @@ DoubleBattleGetPointerPrefix=0A9906980904090C
 BeqToSingleTrainerNumber=0xD0D1
 TextBoxChoicePrefix=6088B0420AD1A088
 GymScriptOffsets=[14,38,59,126,194,216,228,242]
+GymBadgeNumbers=[0,1,2,3,4,5,6,7]
 Arm9CRC32=69BC03D6
 OverlayCRC32<10>=F8D7B6CA
 OverlayCRC32<21>=F2B9DC42
